# alpha-wallet-android

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dapps_list.json
app/src/main/cpp/: CMakeLists.txt  keys.c
app/src/main/java/com/alphawallet/app/: App.java  C.java
app/src/main/java/com/alphawallet/app/di/: RepositoriesModule.java
app/src/main/java/com/alphawallet/app/entity/: CryptoFunctions.java  EventSync.java  NetworkInfo.java
app/src/main/java/com/alphawallet/app/interact/: CreateTransactionInteract.java
app/src/main/java/com/alphawallet/app/repository/: AWRealmMigration.java  EthereumNetworkBase.java  KeyProvider.java  KeyProviderJNIImpl.java  PreferenceRepositoryType.java  RpcConfigRepository.java  SharedPreferenceRepository.java
app/src/main/java/com/alphawallet/app/service/: AWHttpServiceWaterfall.java  AssetDefinitionService.java  KeyService.java  RPCRankingManager.java  (+3 more)
app/src/main/res/drawable/: circle_indicator.xml  ic_settings_node_rpcs.xml
app/src/main/res/layout/: activity_node_rpcs.xml  item_rpc_chain_header.xml  item_rpc_entry.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/alphawallet/app/: CryptoFunctions.java  URLUtilsTest.java
app/src/test/java/com/alphawallet/shadows/: ShadowKeyService.java  ShadowPreferenceRepository.java
fastlane/metadata/android/en-US/: full_description.txt
gradle/: libs.versions.toml
lib/: build.gradle
lib/src/main/java/com/alphawallet/ethereum/: EthereumNetworkBase.java
(+74 files in other folders)
